# my_common_docs

./: .gitignore  Makefile  README.md  TODO.md  TODO.txt  cflags_and_more.txt  git  makefile  my_book.txt  runit.txt  to_read.md  to_read.txt  void
3d_printer/: links.md
Programming/: NOTES  README.md  accelerometer.md  algos_datatypes.md  bewegungs_melder.md  bmp180.md  c++_programming.md  c_programming_notes.md  code_style.md  container.md  credentials.md  credentials.txt  cross_autotools.txt  debug_kernel_crash_error.md  debug_kernel_crash_error.txt  dtrace_linux.md  extended_gcc_Wxxxxx_options.txt  flags.txt  function_pointer.md  function_pointer.txt  game_development.md  gdb_signal_handler_debugging.md  gdb_signal_handler_debugging.txt  gettext_init.txt  gnu_as.md  gpio_irq.txt  gtk_gettext.txt  learning_more_c.txt  libraries.md  line_discipline.md  linker.md  linker.txt  links.md  loadavrg.md  malloc_debugging.txt  man_pages.txt  message_queue.txt  namespaces.txt  new_syscalls.md  opencv_and_camera.md  (+17 more)
Programming/can_lin/: arietta_lin.txt  can.md  can.txt
Programming/golang/: intro.md
Programming/gtk/: gtk_multithreaded.md
Programming/i2c/: i2c.md  i2c.txt  lcd1602.md  links.md  links.txt  (+1 more)
admin/: README.md  ascii_art.md  ascii_doc.md  clean_whitespaces.sh  clocks.md  disk_encryption.md  distcc.md  dm_integrity.md  emacs_notes.md  emacs_notes.txt  fan_ctrl_via_pwm.md  fan_ctrl_via_pwm.txt  gnome.md  gpg_topics.md  howto_desktop_video.md  howto_rsync_tuhs.md  howto_rsync_tuhs.txt  init_info.md  iot_topic.md  java.md  limit_cpu_freq.sh  links.md  mail_sudo.md  mail_sudo.txt  monitor_network.md  multiarch.md  musl.md  musl.txt  namespaces_and_network.md  network.md  port_assignement.md  power_managment.md  qemu.md  qt6.md  sed.txt  set_maxcpu_freq.txt  set_ssd_trim.md  sourceforge.txt  ssh.md  sudo.md  (+11 more)
atmel_avr_controller/: Makefile  dac.md  debugging_via_uart.md  i2c.md  rtc.md
autotools/: Makefile  README.md  cflags_and_more.txt  gettext_init.txt  gtk_autotools.md  tutorials.md  tutorials.txt  version_info.md  version_info.txt
autotools/daemon_with_static_lib/: .gitignore  ABOUT-NLS  AUTHORS  Makefile.am  NEWS  README.md  TODO  bootstrap.sh  configure.ac  do_all_in_one_step.sh
autotools/daemon_with_static_lib/Documentation/: Makefile.am  howto_baalued.txt
autotools/daemon_with_static_lib/etc/: Makefile.am
autotools/daemon_with_static_lib/lib/: Makefile.am  config.c  helper.c  libservice.h
autotools/daemon_with_static_lib/man/: Makefile.am  baalued.1
autotools/daemon_with_static_lib/po/: LINGUAS  Makevars  POTFILES.in  de.po
autotools/daemon_with_static_lib/scripts/: Makefile.am  baalued_script.sh
autotools/daemon_with_static_lib/src/: .gitignore  Makefile.am  main.c
autotools/prog/: .gitignore  Makefile.am  autogen.sh  configure.ac
bare-metal/: arctic-core.txt  erika-os.txt  openosk.txt
cluster/: raspi_cluster.md
cmake/: README.md  cmake.txt  example_lib_CMakeFiles.txt
cmake/tutorial/: CMakeLists.txt  config.h.in  makefile  tutorial.cc
cmake/tutorial/math_functions/: CMakeLists.txt  math_functions.h  mysqrt.cc
compile/: howto_build_gcc.md  links.md
crossbuild/: README.md
electronic/: dc_dc_converter.md  project_memory.md
embedded_devices/: README.md  README.txt  allwinner.md  allwinner.txt  arduino_hardware.md  avrisp.rules  buildroot_minimal_bananapi.md  eeprom.md  eeprom.txt  howto_arm926_sdk.txt  howto_at91bootstrap.txt  howto_build_toolchain.txt  howto_can.txt  howto_clock.txt  howto_dts.txt  howto_i2c.txt  howto_kernel.txt  howto_kernel_arm926.txt  howto_rpusbdisp.txt  info_dd.md  info_where_to_find_resize.txt  kdos.txt  lemaker_hikey_kirin620.md  lemaker_hikey_kirin620.txt  nanopi.md  orange_pi.md  pine64.md  trustzone.md  uboot_links.md  ultrasonic_sensors.md  ultrasonic_sensors.txt
english/: vocabulary.md
for_my_blog/: distcc.md  distcc_build_kernel.txt
fpga/: 51-usbblaster.rules  altera.md  general.md  linux.md  open_source.md  quartus.md
freebsd/: README.md  TODO.md  deactivate_beep.md  dot_bashrc  dot_emacs  dot_tmux.conf  fonts.txt  german.txt  gnome.txt  rc.conf  tools_and_knowhow.md
games/: books.md  links.md  pixel_art.md  tutorials.md
gentoo/: allwinner.md  distcc.md  packages.md  raspi.md  safe_cflags.md
git/: README.md  github_contribution.txt  links.md  links.txt  mixed.txt  remote_branches.txt
gpsd/: gpsd.md  gpsd.txt  intro.md  maps.md
hardware/: 5v_3v3.md  README.md  dcf77.md  intel_processors.txt  lcd44780.md  pcb.md  pcb.txt  schematics.md
hypervisor/: README.md
kernel/: README.md  alloc_memory.txt  crash_kernel.txt  debug.md  dracut.txt  kthread.md  links.md  links.txt  memory_topics.md  printk_and_co.md
latex/: README.md  tex-bin.txt
my_book/: my_book.md  rt_book.md  signals_threads_and_tracing_book.md
operation_systems/: links.md
paper/: idea.md  kombination_bare_linux.md  linux.md  realtime-os.md  time_triggert-os.md
programming/: exit.txt  namespaces.txt  template.txt
promotion/: event_triggert-os.md  example_dc_regulator.md  idea.md  realtime-os.md  temp.md  time_triggert-os.md
robotic/: algos.md  dc_dc_converter.md  dc_driver.md  l293.md  links_hw.txt  robotic_general.md  robotic_general.txt  stepper.md
sensors/: links.md  nfc..md
theory/: README.md  concurrency_parallelism.txt
troff/: README.md  links.md  typesetting.txt
tuhs.org/: README.md  makefile
unsorted_stuff/: 5v_3v3.txt  TODO.txt  dev_nodes.txt  git_kdo.txt  logger_shell.txt  mulitarch.txt  my_book.txt  network.txt  network_address_shell.txt  regex.txt  search_string_shell.txt  to_read.md  to_read.txt
void/: armv5te.md  armv5te.txt  bashrc  bashrc_root  crash_kernel.txt  deactive_beep.md  distcc.txt  dot_bashrc_echnaton  dot_emacs  dot_emacs_echnaton  firewall.md  gitconfig  howto_encrypted_home.md  howto_luks_void.md  installed_packages_20150828.txt  kvm.txt  locale.txt  macbook.txt  makefile_home_folder  makefile_src_folder  runit.txt  void-linux_intro.txt  void-package.txt  xbps_error.md  zsh.txt
windows/: Makefile  set_utc_windows.md
xfce/: dot_gtkrc-2.0  icons.tgz_  links.md
(+183 files in other folders)
